stylesheets/less/modal.less
/* MODAL */
.modal-overlay{
	visibility: hidden;
	opacity: 0;
	position: absolute;
	left: 0;
	top: 0;
	bottom: 0;
	right: 0;
	z-index: 98;
}
.modal{
	visibility: visible;
	opacity: 0;
	background: #fff;
	box-shadow: 0 4px 16px rgba(0,0,0,.2);
	border: 1px solid rgba(0,0,0,.333);
	width: 400px;
	height: 400px;
	position: absolute;
	left: 50%;
	top: 50%;
	left: 10%;
	top: 10%;
	z-index: 99;
    ::-webkit-scrollbar {
        overflow: visible;
        height: 13px;
        width: 14px;
    }
    ::-webkit-scrollbar-thumb {
        background-color: rgba(0,0,0,.2);
        background-clip: padding-box;
        border: solid transparent;
        border-width: 3px;
        min-height: 28px;
        padding: 100px 0 0;
        box-shadow: inset 1px 1px 0 rgba(0,0,0,.1),inset 0 -1px 0 rgba(0,0,0,.07);
        &:active {
            background-color: rgba(0,0,0,.4);
        }
    }
    ::-webkit-scrollbar-button {
        height: 0;
        width: 0;
    }
    ::-webkit-scrollbar-track {
        background-clip: padding-box;
        border: solid transparent;
        border-width: 0 0 0 4px;
    }
}
.modal-body{
	height: calc( 100% - 75px );
}
.modal-content {
	padding: 20px;
	transition: transform 0.7s cubic-bezier(0.165, 0.840, 0.440, 1.000);
	transform: translateY(-50px);
}
#help-modal {
	width: 320px;
}
#help-modal p {
	font-family: arial, sans-serif;
	font-size: 18px;
	margin-top: 20px;
}
.modal.opening .modal-content{
	transform: translateY(0px);
}
.modal-content p{
	font-size: 15px;
	margin: 0 0 15px;
}
.modal-header{
	transition: border-color 0.2s ease;
	box-sizing: border-box;
	background-color: white;
	border-bottom: 1px solid rgba(0,0,0,.2);
	font-size: 16px;
	height: 60px;
	line-height: 30px;
	margin: 0;
	padding: 22px 26px;
	vertical-align: middle;
}
.modal-header-title{
	text-align: center;
	margin: 0;
	padding-bottom: 10px;
	font-size: 22px;
	line-height: 28px;
	font-weight: 400;
	letter-spacing: -0.03em;
	cursor: default;
}
.modal-header-btn{
	float: right;
	border-style: none;
	cursor: pointer;
    &:hover{
	    color: #4C9EDA;
    }
}

.modal.is-dragging{
	border-color: #66afe9;
	outline: 0;
	box-shadow: 0 0 8px rgba(102,175,233,.6), 0 6px 20px rgba(0,0,0,.2);
}
.modal.opening, .modal-overlay.opening{
	-webkit-animation: show 0.5s ease;
	animation: show 0.5s ease;
	-webkit-animation-fill-mode: forwards;
	animation-fill-mode: forwards;
}
.modal.closing, .modal-overlay.closing{
	-webkit-animation: hide 0.5s ease;
	animation: hide 0.5s ease;
	-webkit-animation-fill-mode: forwards;
	animation-fill-mode: forwards;
}

#help-header {
    padding: 2px 2px;
    background-color: #333333;
    color: white;
}

#help-content {
	overflow-y: scroll;
	overflow-x: none;
    padding: 10px;
	text-align: center;
	height: 310px;
    -webkit-animation-name: animateleft;
    -webkit-animation-duration: 1s;
    animation-name: animateleft;
    animation-duration: 1s
}

@keyframes show {
    0% { opacity: 0; }
    100% {opacity: 1; }
}
@-webkit-keyframes show {
    0% { opacity: 0; }.modal-header-title
    100% { opacity: 1; }
}
@keyframes hide {
	0% { opacity: 1; }
    100% { opacity: 0; }
}
@-webkit-keyframes hide {
	0% { opacity: 1; }
    100% { opacity: 0; }
}

@-webkit-keyframes animateleft {
    from {left: -300px; opacity: 0} 
    to {left: 0; opacity: 1}
}

@keyframes animateleft {
    from {left: -300px; opacity: 0}
    to {left: 0; opacity: 1}
}

@media only screen and (max-width : 800px) {
    .modal{
		width: 400px;
    }   
}

